# paulistring-comparison

./: .gitignore  LICENSE  README.md  main.py  paulistring.jl  pyproject.toml
results/Intel(R) Core(TM) i5-8265U CPU @ 1.60GHz/: README.md
results/Intel(R) Core(TM) i9-14900KF/: README.md
results/optimal/Intel(R) Core(TM) i5-8265U CPU @ 1.60GHz/: README.md
results/optimal/Intel(R) Core(TM) i9-14900KF/: README.md
src/: pauliarray.py  paulie.py  paulistring_jl.py  paulistrings.py  stim.py
