[project]
name = "paulistring-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "juliacall>=0.9.35",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pauliarray",
    "paulie",
    "paulistrings>=0.1.1",
    "py-cpuinfo>=9.0.0",
    "pycocotools==2.0.8",
    "stim>=1.16.0",
]

[tool.uv.sources]
paulie = { git = "https://github.com/QPauLie/PauLie.git" }
pauliarray = { git = "https://github.com/algolab-quantique/pauliarray.git" }
